add runtimestats to api
