# restapi/operations/get_runtime_stats_responses.go
@@ -1,0 +1,119 @@
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/vice-registry/vice-api/models"
+)
+
+// GetRuntimeStatsOKCode is the HTTP code returned for type GetRuntimeStatsOK
+const GetRuntimeStatsOKCode int = 200
+
+/*GetRuntimeStatsOK successful operation
+
+swagger:response getRuntimeStatsOK
+*/
+type GetRuntimeStatsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.RuntimeStats `json:"body,omitempty"`
+}
+
+// NewGetRuntimeStatsOK creates GetRuntimeStatsOK with default headers values
+func NewGetRuntimeStatsOK() *GetRuntimeStatsOK {
+	return &GetRuntimeStatsOK{}
+}
+
+// WithPayload adds the payload to the get runtime stats o k response
+func (o *GetRuntimeStatsOK) WithPayload(payload *models.RuntimeStats) *GetRuntimeStatsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get runtime stats o k response
+func (o *GetRuntimeStatsOK) SetPayload(payload *models.RuntimeStats) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRuntimeStatsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetRuntimeStatsUnauthorizedCode is the HTTP code returned for type GetRuntimeStatsUnauthorized
+const GetRuntimeStatsUnauthorizedCode int = 401
+
+/*GetRuntimeStatsUnauthorized Authentication information is missing or invalid
+
+swagger:response getRuntimeStatsUnauthorized
+*/
+type GetRuntimeStatsUnauthorized struct {
+	/*
+	  Required: true
+	*/
+	WWWAuthenticate string `json:"WWW_Authenticate"`
+}
+
+// NewGetRuntimeStatsUnauthorized creates GetRuntimeStatsUnauthorized with default headers values
+func NewGetRuntimeStatsUnauthorized() *GetRuntimeStatsUnauthorized {
+	return &GetRuntimeStatsUnauthorized{}
+}
+
+// WithWWWAuthenticate adds the wWWAuthenticate to the get runtime stats unauthorized response
+func (o *GetRuntimeStatsUnauthorized) WithWWWAuthenticate(wWWAuthenticate string) *GetRuntimeStatsUnauthorized {
+	o.WWWAuthenticate = wWWAuthenticate
+	return o
+}
+
+// SetWWWAuthenticate sets the wWWAuthenticate to the get runtime stats unauthorized response
+func (o *GetRuntimeStatsUnauthorized) SetWWWAuthenticate(wWWAuthenticate string) {
+	o.WWWAuthenticate = wWWAuthenticate
+}
+
+// WriteResponse to the client
+func (o *GetRuntimeStatsUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header WWW_Authenticate
+
+	wWWAuthenticate := o.WWWAuthenticate
+	if wWWAuthenticate != "" {
+		rw.Header().Set("WWW_Authenticate", wWWAuthenticate)
+	}
+
+	rw.WriteHeader(401)
+}
+
+// GetRuntimeStatsInternalServerErrorCode is the HTTP code returned for type GetRuntimeStatsInternalServerError
+const GetRuntimeStatsInternalServerErrorCode int = 500
+
+/*GetRuntimeStatsInternalServerError Internal Server Error
+
+swagger:response getRuntimeStatsInternalServerError
+*/
+type GetRuntimeStatsInternalServerError struct {
+}
+
+// NewGetRuntimeStatsInternalServerError creates GetRuntimeStatsInternalServerError with default headers values
+func NewGetRuntimeStatsInternalServerError() *GetRuntimeStatsInternalServerError {
+	return &GetRuntimeStatsInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *GetRuntimeStatsInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+}
